# context-pilot

./: .gitignore  Cargo.toml  README.md  clippy.toml  deploy_local.sh  dummy.txt  dummy_test.rs  increment.txt  run.sh
.context-pilot/commands/: hello.md
.context-pilot/shared/: callbacks.yaml  memories.yaml  tree-descriptions.yaml
.context-pilot/shared/entities/: schema.sql
.github/checks/: allowed-lint-exceptions.yaml  check-lint-config.sh  lint-config.chain
crates/cp-base/src/: flame.rs  lib.rs  modules.rs
crates/cp-console-server/: Cargo.toml
crates/cp-console-server/src/: cleanup.rs  main.rs
crates/cp-mod-brave/src/: tools.rs
crates/cp-mod-callback/src/: lib.rs  (+7 more)
crates/cp-mod-entities/: Cargo.toml
crates/cp-mod-files/: Cargo.toml
crates/cp-mod-logs/: Cargo.toml
crates/cp-mod-logs/src/: lib.rs  tools.rs  types.rs
crates/cp-mod-prompt/: Cargo.toml
crates/cp-mod-search/: Cargo.toml
docs/: design-entities.md  design-logs-panel.md  design-meilisearch.md  rust-static-analysis-tools.md  search-module.md
docs/talk/: index.html  script.js  style.css
src/: main.rs
src/app/: events.rs  prompt_builder.rs
src/infra/: config.rs  constants.rs  flame.rs  mod.rs  profiler.rs  tools.rs  watcher.rs
src/llms/: mod.rs  prompt_tick_csv.rs
src/modules/: mod.rs  pre_flight.rs
src/ui/: helpers.rs  markdown.rs  mod.rs  search_overlay.rs
yamls/: injections.yaml  prompts.yaml  reverie.yaml  themes.yaml
yamls/tools/: callback.yaml  core.yaml  entities.yaml  logs.yaml  memory.yaml  ocr.yaml  prompt.yaml  queue.yaml  search.yaml  spine.yaml  tree.yaml
(+198 files in other folders)
