[package]
name = "cp-mod-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-base.workspace = true
cp-render.workspace = true
cp-mod-memory = { path = "../cp-mod-memory" }
log = "0.4"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lints]
workspace = true
